Revert "RecoveryListener"
This reverts commit 1e4e528109cb44380a3f0581853a681787348d3c.