@@ -27,13 +27,12 @@ public class RebalanceListenerTest {
     @Test
     public void testSeekToBeginning() {
 
-        RebalanceListener<String,String> rebalanceListener = seekToBeginning();
+        RebalanceListener<String, String> rebalanceListener = seekToBeginning();
         KafkaConsumer<String, String> c = mock(KafkaConsumer.class);
-        when(c.position(any())).thenReturn(0L);
-        rebalanceListener.withKafkaConsumer(c).accept(List.of(tp));
-        verify(c, times(0)).position(any());
-        verify(c, times(1)).seekToBeginning(any());
-        verify(c, times(0)).seekToEnd(any());
+        Collection<TopicPartition> tps = Collections.singletonList(tp);
+        rebalanceListener.withKafkaConsumer(c).accept(tps);
+        verify(c, times(1)).seekToBeginning(tps);
+        verify(c, times(0)).seekToEnd(tps);
         verify(c, times(0)).seek(any(), any());
     }
 
@@ -41,13 +40,12 @@ public class RebalanceListenerTest {
     @Test
     public void testSeekToEnd() {
 
-        RebalanceListener<String,String> rebalanceListener = seekToEnd();
+        RebalanceListener<String, String> rebalanceListener = seekToEnd();
         KafkaConsumer<String, String> c = mock(KafkaConsumer.class);
-        when(c.position(any())).thenReturn(0L);
-        rebalanceListener.withKafkaConsumer(c).accept(List.of(tp));
-        verify(c, times(0)).position(any());
-        verify(c, times(0)).seekToBeginning(any());
-        verify(c, times(1)).seekToEnd(any());
+        Collection<TopicPartition> tps = Collections.singletonList(tp);
+        rebalanceListener.withKafkaConsumer(c).accept(tps);
+        verify(c, times(0)).seekToBeginning(tps);
+        verify(c, times(1)).seekToEnd(tps);
         verify(c, times(0)).seek(any(), any());
     }
 
@@ -56,10 +54,8 @@ public class RebalanceListenerTest {
 
         RebalanceListener<String, String> rebalanceListener = noOp();
         KafkaConsumer<String, String> c = mock(KafkaConsumer.class);
-        when(c.position(any())).thenReturn(0L);
         Collection<TopicPartition> tps = Collections.singletonList(tp);
-        rebalanceListener.withKafkaConsumer(c).accept(List.of(tp));
-        verify(c, times(0)).position(any());
+        rebalanceListener.withKafkaConsumer(c).accept(tps);
         verify(c, times(0)).seekToBeginning(tps);
         verify(c, times(0)).seekToEnd(tps);
         verify(c, times(0)).seek(any(), any());
@@ -68,15 +64,13 @@ public class RebalanceListenerTest {
     @Test
     public void testSeekToOffsets() {
 
-        RebalanceListener<String,String> rebalanceListener = seekToOffset(Map.of(tp, 0L));
+        RebalanceListener<String, String> rebalanceListener = seekToOffsets(ignored -> o);
         KafkaConsumer<String, String> c = mock(KafkaConsumer.class);
-        when(c.position(any())).thenReturn(0L);
         Collection<TopicPartition> tps = Collections.singletonList(tp);
-        rebalanceListener.withKafkaConsumer(c).accept(List.of(tp));
-        verify(c, times(0)).position(any());
+        rebalanceListener.withKafkaConsumer(c).accept(tps);
         verify(c, times(0)).seekToBeginning(tps);
         verify(c, times(0)).seekToEnd(tps);
-        verify(c, times(1)).seek(tp, 0L);
+        verify(c, times(1)).seek(tp, o);
     }
 
     @Test
@@ -84,14 +78,12 @@ public class RebalanceListenerTest {
 
         ZonedDateTime now = ZonedDateTime.now();
 
-        RebalanceListener<String,String> rebalanceListener = seekToTimestamp(now.toInstant());
+        RebalanceListener<String, String> rebalanceListener = seekToTimestamp(now);
         KafkaConsumer<String, String> c = mock(KafkaConsumer.class);
-        when(c.position(any())).thenReturn(0L);
         List<TopicPartition> tps = Collections.singletonList(tp);
         Map<TopicPartition, Long> times = Collections.singletonMap(tp, now.toInstant().toEpochMilli());
         when(c.offsetsForTimes(times)).thenReturn(Collections.singletonMap(tp, new OffsetAndTimestamp(o, now.toInstant().toEpochMilli())));
-        rebalanceListener.withKafkaConsumer(c).accept(List.of(tp));
-        verify(c, times(0)).position(any());
+        rebalanceListener.withKafkaConsumer(c).accept(Collections.singletonList(tp));
         verify(c, times(0)).seekToBeginning(tps);
         verify(c, times(0)).seekToEnd(tps);
         verify(c, times(1)).seek(tp, o);
@@ -101,13 +93,12 @@ public class RebalanceListenerTest {
     public void testAndThen() {
 
         AtomicBoolean called = new AtomicBoolean(false);
-        RebalanceListener<String,String> rebalanceListener = RebalanceListener.<String,String>seekToBeginning().andThen(c -> tps -> called.set(true));
+        RebalanceListener<String, String> rebalanceListener = RebalanceListener.<String,String>seekToBeginning().andThen(cp -> tps -> called.set(true));
         KafkaConsumer<String, String> c = mock(KafkaConsumer.class);
-        when(c.position(any())).thenReturn(0L);
-        rebalanceListener.withKafkaConsumer(c).accept(List.of(tp));
-        verify(c, times(0)).position(any());
-        verify(c, times(1)).seekToBeginning(any());
-        verify(c, times(0)).seekToEnd(any());
+        Collection<TopicPartition> tps = Collections.singletonList(tp);
+        rebalanceListener.withKafkaConsumer(c).accept(tps);
+        verify(c, times(1)).seekToBeginning(tps);
+        verify(c, times(0)).seekToEnd(tps);
         verify(c, times(0)).seek(any(), any());
         assertTrue(called.get());
     }
